--- a/_includes/themes/twitter/post.html
+++ b/_includes/themes/twitter/post.html
@@ -1,11 +1,12 @@
 <div class="page-header">
-  <h1>{{ page.title }} <small>PGCN</small></h1>
+  <h1>{{ page.title }}<small>PGCN</small></h1>
 </div>
 
 <div class="row">
   <div class="span8">
     {{ content }}
     <hr>
+    <!--
     <div class="pagination">
       <ul>
       {% if page.previous %}
@@ -21,6 +22,7 @@
       {% endif %}
       </ul>
     </div>
+    -->
     <hr>
     {% include JB/comments %}
   </div>
@@ -39,4 +41,15 @@
   {% endunless %}  
   </div>
   -->
+  <div class="span4">
+    <h4>相关</h4>
+  {% for tag in site.tags %} 
+    {% if tag[0] == page.tags[0] %}
+    <ul>
+      {% assign pages_list = tag[1] %}  
+      {% include JB/pages_list %}
+    </ul>
+    {% endif %}
+  {% endfor %}
+
 </div>
